--- a/lessons/lesson4.ipynb
+++ b/lessons/lesson4.ipynb
@@ -27,7 +27,10 @@
     "## Import the wine quality datasets"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -89,7 +92,10 @@
     "We use pre-defined column names."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -128,7 +134,10 @@
     "## Characteristics of the datasets"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -195,7 +204,10 @@
     "#### Missing values in the datasets"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -296,7 +308,10 @@
     "#### Duplicate rows in the datasets"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -305,7 +320,10 @@
     "Number of duplicate rows in the red wine dataset."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -372,7 +390,10 @@
     "#### Unique values in the datasets"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -404,7 +425,10 @@
     "Unique values of red wine quality."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -471,7 +495,10 @@
     "#### Mean density in the red wine dataset"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -530,7 +557,10 @@
     "Add a `color` column to both data frames, to later identify the color in the combined data frame."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -849,7 +879,10 @@
     "#### What level of acidity (pH value) receives the highest average rating?"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1027,7 +1060,10 @@
     "## Drawing conclusions using query"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1036,7 +1072,10 @@
     "#### Do wines with higher alcohol level receive better ratings?"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1045,7 +1084,10 @@
     "Select entries with low and high alcohol."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1106,7 +1148,10 @@
     "Double-check that the groups are a disjoint partitioning of all wine entries."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1142,7 +1187,10 @@
     "Calculate the mean quality for low/high alcohol subsets."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1329,7 +1377,10 @@
     "## Plotting Type & Quality with `DataFrame.plot`"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1468,7 +1519,10 @@
     "Simple example of a bar chart with matplotlib."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1609,7 +1663,10 @@
     "### Plotting wine quality with Matplotlib"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1618,7 +1675,10 @@
     "#### Do wines with higher alcohol level receive better ratings?"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1757,7 +1817,10 @@
     "#### Do sweeter wines receive better ratings?"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1795,7 +1858,10 @@
     "#### What level of acidity (pH value) receives the highest average rating?"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
