--- a/project/01_intro_and_data_wrangling.ipynb
+++ b/project/01_intro_and_data_wrangling.ipynb
@@ -15,7 +15,10 @@
     "  - <a href='#join-data'>Join the data sets</a>"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -39,7 +42,10 @@
     "[Summary of the Terms of Use for Datasets Listed in The World Bank Data Catalog](https://data.worldbank.org/summary-terms-of-use).\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -49,7 +55,10 @@
     "# Data Wrangling\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -113,7 +122,10 @@
     "First we define helper functions for data wrangling."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -160,7 +172,10 @@
     "from the data provided by the World Bank [here](https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD)."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -169,7 +184,10 @@
     "We will use pre-defined column names."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -240,7 +258,10 @@
     "Which countries are there in the dataset?"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -337,7 +358,10 @@
     "There are 195 rows and no missing values in the data set."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -369,7 +393,10 @@
     "There are no duplicated rows in the data set."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -402,7 +429,10 @@
     "each country has exactly one entry for the considered year 2018."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -416,7 +446,10 @@
     "We consider the data on GDP per capita in current US dollars for the year 2018."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -454,7 +487,10 @@
     "Convert the country codes to lower case so that it matches the country codes in `df_gdp_ppp`."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -518,7 +554,10 @@
     "There are some missing values. We will deal with them after joining the two GDP data frames in the next subsection."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -530,7 +569,10 @@
     "and the `df_gdp_ppp` data frame containing GDP in PPP dollars."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -588,7 +630,10 @@
     "There are a few countries where the GDP per capita is missing."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -623,7 +668,10 @@
     "We will only make more precise manual adjustments for two of these countries."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -656,7 +704,10 @@
     "Now there are no more missing values."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -665,7 +716,10 @@
     "#### Manual adjustments for selected countries"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -675,7 +729,10 @@
     "and [Taiwan](https://en.wikipedia.org/wiki/Taiwan)."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -691,7 +748,10 @@
     "We will approximate the missing GDP value with the latter figure."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -737,7 +797,10 @@
     "Based on various sources on the Internet, we will approximate its GDP per capita for 2018 by 25,000 in current USD."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -775,7 +838,10 @@
     "We consider the data on total population for the year 2018."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -838,7 +904,10 @@
     "Convert the country codes to lower case so that it matches the country codes in the other data frames."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -926,7 +995,10 @@
     "There are two rows with missing population figures. We will omit these rows for our analysis."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -976,7 +1048,10 @@
     "that are also present in the other data sets."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1018,7 +1093,10 @@
     "We will convert the column to `int64`."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1118,7 +1196,10 @@
     "Now the population data set has been cleaned for our intended analysis."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1132,7 +1213,10 @@
     "We consider the data on fuel exports for the year 2018."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1167,7 +1251,10 @@
     "so we also import the data for 2 previous years in order to fill the gaps."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1207,7 +1294,10 @@
     "Convert the country codes to lower case so that it matches the country codes in the other data frames."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1266,7 +1356,10 @@
     "We fill try to fill them from the previous years."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1300,7 +1393,10 @@
     "and fill them with 0."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1323,7 +1419,10 @@
     "We drop the columns for previous years because we only needed them to fill missing values."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1408,7 +1507,10 @@
     "that are also present in the other data sets."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1448,7 +1550,10 @@
     "Now the fuel export data set has been cleaned for our intended analysis."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1467,7 +1572,10 @@
     "Further freely available explanation on the democracy index can be found in the [Wikipedia article](https://en.wikipedia.org/wiki/Democracy_Index)."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1563,7 +1671,10 @@
     "There are 167 rows and no missing values in the data set."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1582,7 +1693,10 @@
     "| Authoritarian | 0 - 4 |"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1644,7 +1758,10 @@
     "### Assess missing data in democracy data frame"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1681,7 +1798,10 @@
     "if we can omit them from our analysis."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1719,7 +1839,10 @@
     "We now calculate the share of their population and GDP relatively to all countries in the GDP data set."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1747,7 +1870,10 @@
     "in countries with missing democracy data in relation to all countries in the GDP data set:"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1788,7 +1914,10 @@
     "Hence, leaving them out would not significantly impact the outcome of our analysis."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1807,7 +1936,10 @@
     "Only for fuel exports, we will use left join and fill missing values with 0."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1887,7 +2019,10 @@
     "for the year 2018."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1899,7 +2034,10 @@
     "We now add columns with total GDP per country, calculated from GDP per capita and population size."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1936,7 +2074,10 @@
     "Finally, we save the cleaned data set into a CSV file."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
