--- a/project/02_exploratory_data_analysis_and_conclusions.ipynb
+++ b/project/02_exploratory_data_analysis_and_conclusions.ipynb
@@ -22,7 +22,10 @@
     "  - <a href='#outlook'>Outlook</a>"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -37,7 +40,10 @@
     "which could notably contribute to a country's wealth."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -49,7 +55,10 @@
     "We define some helper functions for data analysis."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -450,7 +459,10 @@
     "(<a href=\"02_data_wrangling.ipynb\" target=\"_blank\">Jupyter</a> / <a href=\"02_data_wrangling.html\" target=\"_blank\">HTML</a>)."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -496,7 +508,10 @@
     "- Is there a correlation between population size and democracy index?"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -508,7 +523,10 @@
     "We want to have a look at 30 countries with the highest democracy index."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -550,7 +568,10 @@
     "- Most of the countries seem rather wealthy, but there are also some less wealthy ones\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -562,7 +583,10 @@
     "We want to explore, how many people live in democratic vs. autocratic countries."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -713,7 +737,10 @@
     "The biggest democratic countries:"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -746,7 +773,10 @@
     "The biggest countries with a hybrid regime:"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -779,7 +809,10 @@
     "The biggest authoritarian countries:"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -814,7 +847,10 @@
     "and around 1/6 in hybrid regimes (e.g. some Eastern European countries or Turkey)."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -826,7 +862,10 @@
     "We want to explore, how many people live in wealthy vs. less-wealthy countries."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -839,7 +878,10 @@
     "- _below-average_, if both GDP per capita values are below average"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -850,7 +892,10 @@
     "from [Gapminder](https://www.gapminder.org/)."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -875,7 +920,10 @@
     "from [World Bank Open Data](https://data.worldbank.org/)."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -899,7 +947,10 @@
     "(in current USD or in PPP dollars, respectively) are above-average."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -950,7 +1001,10 @@
     "We want to find out how many people live in countries with above/around/below-average GDP level."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1101,7 +1155,10 @@
     "The biggest wealthy countries:"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1156,7 +1213,10 @@
     "The biggest countries with GDP level around average:"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1190,7 +1250,10 @@
     "The biggest countries with GDP level below average:"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1229,7 +1292,10 @@
     "(the biggest 5 countries being India, Indonesia, Pakistan, Brazil, Nigeria)."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1241,7 +1307,10 @@
     "We want to check if there is a correlation between the population size of a country and its democracy index."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1293,7 +1362,10 @@
     "Let's have a look at the 50 most populous countries, colored by the regime type:"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1334,7 +1406,10 @@
     "i.e., there is no correlation for them. Let's plot the remaining countries:"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1373,7 +1448,10 @@
     "between population and democracy index."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1406,7 +1484,10 @@
     "because the calculated correlation coefficient is almost 0 (or more exactly, -0.01).\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1426,7 +1507,10 @@
     "- Is there a correlation between GDP per capita and democracy index?"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1439,7 +1523,10 @@
     "The bars are colored according to the regime type."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1492,7 +1579,10 @@
     "That's why we now look at the fuel export percentages for the same 50 countries."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1532,7 +1622,10 @@
     "- _all_ non-democratic countries have fuel exports of more than 50%, some of them over 80% of total merchandise exports"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1544,7 +1637,10 @@
     "are the ones with fuel exports above 50% of merchandise exports:"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1622,7 +1718,10 @@
     "and plot the percentage of total GDP produced in each regime type."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1756,7 +1855,10 @@
     "less than 1/4 in autocracies, and less than 5% in countries with hybrid regimes."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1767,7 +1869,10 @@
     "We also want to find out the average GDP per capita in each regime type."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1836,7 +1941,10 @@
     "It turns out that the average GDP per capita in democracies is more than twice as high as for autocracies."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -1850,7 +1958,10 @@
     "Let's analyze the correlation between fuel exports and wealth specifically for authoritarian countries."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -2034,7 +2145,10 @@
     "for authoritarian countries."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -2044,7 +2158,10 @@
     "we also check whether there is such a correlation for democratic countries:"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -2089,7 +2206,10 @@
     "for authoritarian countries (notable correlation) vs. democratic countries (no correlation)."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -2102,7 +2222,10 @@
     "GDP per capita of a country and its democracy index."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -2160,7 +2283,10 @@
     "So, let's have a look at the same scatter plot without the \"oil-rich\" countries:"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -2198,7 +2324,10 @@
     "Now we see that _only_ democratic countries (democracy index above 60) have higher GDP per capita values."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -2210,7 +2339,10 @@
     "Furthermore, we will add labels for a number of countries."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -2262,7 +2394,10 @@
     "the Pearson correlation coefficient between democracy index and GDP per capita."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -2294,7 +2429,10 @@
     "There is a notable correlation between the GDP per capita and the democracy index."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -2328,7 +2466,10 @@
     "more than half of merchandise exports."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -2360,7 +2501,10 @@
     "To sum up, we show the calculated correlation coefficients in the following table:"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
